@@ -14,6 +14,7 @@ HLStats ChangeLog
 *) New: Steam profile page lookup via SteamID. BCmath support (PHP) is needed.
 	http://www.php.net/manual/en/book.bc.php
 *) New: Clan Profile can new enter a steam group URL
+*) Changed: Design options removed from options table
 *) Changed: imgpaht and imgdir option removed
 *) Changed: Host statistics in admin disabled. New version will include this again.
 *) Changed: Constant INCLUDE_PATH removed.
